--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ hs_err_pid*
 /pal04/nbproject/private/
 /pal04/build/
 /pal04/dist/
+/VojtaUlohaB/nbproject/private/
+/VojtaUlohaB/build/
+/VojtaUlohaC/nbproject/private/
+/VojtaUlohaC/build/
