--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ hs_err_pid*
 /VojtaUlohaB/build/
 /VojtaUlohaC/nbproject/private/
 /VojtaUlohaC/build/
+/JavaApplication19/nbproject/private/
+/pal05/nbproject/private/
+/pal05/build/
