pal06 in progress

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ hs_err_pid*
 /JavaApplication19/nbproject/private/
 /pal05/nbproject/private/
 /pal05/build/
+/vojtad3/nbproject/private/
+/vojtaUkol3/nbproject/private/
+/vojtaUkol3/build/
+/vojtaUkol4/nbproject/private/
+/vojtaUkol4/build/
+/vojtaUkol4d/nbproject/private/
+/vojtaUkol4d/build/
+/pal06/nbproject/private/
+/pal06/build/
+/pal06/dist/
